[gd_scene load_steps=53 format=2]

[ext_resource path="res://Images/male_walkcycle_blackbar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/male_slash.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "slash_right",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "slash_right" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle_down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=49]
resource_name = "slash_right"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "slash_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_down"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_left"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_right"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_up"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walk_up"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/idle_down/node = SubResource( 10 )
states/idle_down/position = Vector2( 553, 215 )
states/idle_left/node = SubResource( 11 )
states/idle_left/position = Vector2( 382, 100 )
states/idle_right/node = SubResource( 12 )
states/idle_right/position = Vector2( 747, 100 )
states/idle_up/node = SubResource( 13 )
states/idle_up/position = Vector2( 553, 0 )
states/walk_down/node = SubResource( 14 )
states/walk_down/position = Vector2( 553, 313.078 )
states/walk_left/node = SubResource( 15 )
states/walk_left/position = Vector2( 158, 100 )
states/walk_right/node = SubResource( 16 )
states/walk_right/position = Vector2( 979, 100 )
states/walk_up/node = SubResource( 17 )
states/walk_up/position = Vector2( 553, -128.922 )
transitions = [ "idle_right", "walk_right", SubResource( 18 ), "walk_right", "idle_right", SubResource( 19 ), "idle_right", "idle_up", SubResource( 20 ), "idle_up", "idle_right", SubResource( 21 ), "idle_right", "idle_down", SubResource( 22 ), "idle_down", "idle_right", SubResource( 23 ), "idle_down", "idle_up", SubResource( 24 ), "idle_up", "idle_down", SubResource( 25 ), "idle_left", "idle_right", SubResource( 26 ), "idle_right", "idle_left", SubResource( 27 ), "idle_up", "idle_left", SubResource( 28 ), "idle_left", "idle_up", SubResource( 29 ), "idle_down", "idle_left", SubResource( 30 ), "idle_left", "idle_down", SubResource( 31 ), "idle_up", "walk_up", SubResource( 32 ), "walk_up", "idle_up", SubResource( 33 ), "idle_down", "walk_down", SubResource( 34 ), "walk_down", "idle_down", SubResource( 35 ), "walk_left", "idle_left", SubResource( 36 ), "idle_left", "walk_left", SubResource( 37 ) ]
start_node = "idle_down"
graph_offset = Vector2( 71.7647, -163.471 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="CapsuleShape2D" id=40]

[sub_resource type="CapsuleShape2D" id=41]
height = 0.0

[node name="Character" type="KinematicBody2D" groups=["Player"]]
z_index = 3
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
vframes = 4
frame = 18

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 48 )
animation = "slash_right"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle_down = SubResource( 1 )
anims/idle_left = SubResource( 5 )
anims/idle_right = SubResource( 6 )
anims/idle_up = SubResource( 2 )
anims/slash_right = SubResource( 49 )
anims/walk_down = SubResource( 7 )
anims/walk_left = SubResource( 8 )
anims/walk_right = SubResource( 9 )
anims/walk_up = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 40 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HitBoxArea" type="Area2D" parent="."]
position = Vector2( -20, 10 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
shape = SubResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[node name="Items" type="Node2D" parent="."]

[connection signal="body_entered" from="HitBoxArea" to="." method="_on_HitBoxArea_body_entered"]
[connection signal="body_exited" from="HitBoxArea" to="." method="_on_HitBoxArea_body_exited"]
